# qr-service

./: .dockerignore  .env.example  .gitignore  DESIGN.md  Dockerfile  README.md  SKILL.md  STATUS.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  Cargo.toml  llms.txt  openapi.json
backend/src/: auth.rs  db.rs  lib.rs  main.rs  models.rs  qr.rs  rate_limit.rs  routes.rs
backend/tests/: http_test.rs  integration_test.rs
frontend/: index.html  vite.config.js
frontend/src/: App.css  App.jsx  api.js
sdk/python/: README.md  pyproject.toml  qr_service.py  test_sdk.py
