[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "hnr-qr"
version = "0.1.0"
description = "Python SDK for QR Service — generate, customize, and track QR codes"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [{name = "Humans Not Required"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Graphics",
    "Intended Audience :: Developers",
]

[project.urls]
Homepage = "https://github.com/Humans-Not-Required/qr-service"
Repository = "https://github.com/Humans-Not-Required/qr-service"
Documentation = "https://github.com/Humans-Not-Required/qr-service/tree/main/sdk/python"

[tool.setuptools]
py-modules = ["qr_service"]
